WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
203821
REGRESSION (
r248750
): Drop-down menu for Walgreens 2FA unresponsive to touch
https://bugs.webkit.org/show_bug.cgi?id=203821
Summary
REGRESSION (r248750): Drop-down menu for Walgreens 2FA unresponsive to touch
Wenson Hsieh
Reported
2019-11-04 12:54:39 PST
<
rdar://problem/56550488
>
Attachments
Patch
(6.48 KB, patch)
2019-11-04 14:10 PST
,
Wenson Hsieh
zalan
: review+
Details
Formatted Diff
Diff
Patch for landing
(6.47 KB, patch)
2019-11-04 15:02 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-11-04 14:10:44 PST
Created
attachment 382772
[details]
Patch
alan
Comment 2
2019-11-04 14:20:57 PST
Comment on
attachment 382772
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=382772&action=review
> Source/WebCore/page/ios/ContentChangeObserver.h:74 > + void didNotStartFixedObservationTimerAfterMouseMove();
I'd call it willNotProceedWithFixedObservationTimeWindow
Wenson Hsieh
Comment 3
2019-11-04 14:24:26 PST
Comment on
attachment 382772
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=382772&action=review
>> Source/WebCore/page/ios/ContentChangeObserver.h:74 >> + void didNotStartFixedObservationTimerAfterMouseMove(); > > I'd call it willNotProceedWithFixedObservationTimeWindow
Sounds good! Changed to willNotProceedWithFixedObservationTimeWindow() and WillNotProceedWithFixedObservationTimeWindow
Wenson Hsieh
Comment 4
2019-11-04 15:02:18 PST
Created
attachment 382777
[details]
Patch for landing
WebKit Commit Bot
Comment 5
2019-11-04 15:48:54 PST
Comment on
attachment 382777
[details]
Patch for landing Clearing flags on attachment: 382777 Committed
r252022
: <
https://trac.webkit.org/changeset/252022
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug